<resources>
    <string name="app_name">CANLight</string>

    <!-- edit_menu -->
    <string name="menu_transpose_up_title">"Transpose Up"</string>
    <string name="menu_transpose_down_title">Transpose Down</string>
    <string name="menu_import_pattern_title">Import</string>
    <string name="menu_edit_pattern_title">Edit</string>
    <string name="menu_view_pattern_title">Apply changes</string>
    <string name="menu_view_cancel_edit_title">Discard changes</string>
    <string name="menu_auto_scroll_pause_title">Start</string>
    <string name="menu_auto_scroll_start_title">Pause</string>
    <string name="menu_speed_auto_scroll_title">Speed</string>
    <string name="menu_scale_text_title">Scale</string>
    <string name="menu_eliminate_empty_lines_title">Eliminate Empty Lines</string>
    <string name="menu_add_empty_lines_before_chords_title">Add Empty Lines before Chords</string>

    <!-- improt_preview_menu -->
    <string name="menu_apply_preview_title">Use this</string>
    <string name="menu_discard_preview_title">Go Back</string>

    <!-- listview context menu -->
    <string name="menu_rename_song_title">Rename</string>
    <string name="menu_delete_song_title">Delete</string>

    <!-- main_menu -->
    <string name="menu_settings_title">Settings</string>

    <!-- preferences -->
    <string name="pref_keep_screen_on_key">pref_keep_screen_on</string>
    <string name="pref_keep_screen_on_title">Don\'t Sleep</string>
    <string name="pref_keep_screen_on_summary">Only in Pattern View Mode</string>
    <string name="pref_clear_cache_key">pref_clear_cache</string>
    <string name="pref_clear_cache_title">Clear Cache</string>

    <!-- misc -->
    <string name="nothing_found_search_songs">Nothing found</string>
    <string name="download_pattern_failed">Could not download pattern.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="default_song_name">\</string>


    <string name="activity_import_preview_title">Import Preview</string>
    <string name="rename_dialog_ok">Ok</string>
    <string name="rename_dialog_cancel">Cancel</string>
    <string name="menu_import_title">Import</string>
    <string name="menu_export_title">Export</string>
    <string name="menu_edit_song_group">Edit Group</string>
    <string name="menu_rename_group_title">Rename</string>
    <string name="menu_toogle_player_visibility_title">Player</string>
    <string name="menu_config_player_title">Config Player</string>
    <string name="spotify_logged_in">Spotify: Logged in</string>
    <string name="spotify_logged_out">Spotify: Logged out</string>
    <string name="spotify_login_fail">Spotify: Failed to log in.</string>
    <string name="spotify_connection_message">Spotify Message:</string>
    <string name="spotify_playback_error">Spotify: no song found</string>
    <string name="play_pause_button_content_description">Play/Pause</string>
    <string name="spotify_no_song_error">Spotify: no song</string>
    <string name="goto_last_content_description">Go to last seek</string>
    <string name="no_group_name">No Group</string>
    <string name="menu_remove_group_title">Remove Group</string>
    <string name="menu_new_group_title">New Group</string>
    <string name="new_group_edit_text_placeholder">Group Name</string>
    <string name="menu_edit_midi_command_title">Midi</string>

    <plurals name="numberOfRemovedLines">
        <item quantity="one">Removed %d line</item>
        <item quantity="other">Removed %d lines</item>
    </plurals>
    <plurals name="numberOfInsertedLines">
        <item quantity="one">Inserted %d line</item>
        <item quantity="other">Inserted %d lines</item>
    </plurals>
    <plurals name="importCacheCount">
        <item quantity="one">%d Item</item>
        <item quantity="other">"%d Items"</item>
    </plurals>
    <plurals name="importCacheSize">
        <item quantity="other">", Size: %d kB"</item>
    </plurals>
    <string name="title_activity_edit_midi_command">EditMidiCommandActivity</string>
    <string name="midi_command_is_enabled_switch_title">Enabled</string>
    <string name="no_group_title">No Group</string>
    <string name="no_results">No results</string>
    <string name="new_drive_file_name">Repertoire.json</string>
    <string name="drive_file_creation_failed">Error while trying to create the file</string>
    <string name="created_drive_file_id">"Created an empty file: "</string>
    <string name="share_drive">Share CANLight collection</string>
    <string name="import_pattern_activity_title">Import Pattern</string>
    <string name="confirm_deletion_string">Do you really want to delete \"%s\" from all groups?</string>
    <string name="groups_containing">Groups containing\n\"%s\"</string>
    <string name="group_name_must_not_be_empty">Group name must not be empty</string>
    <string name="no_song_selected">No song selected</string>
    <string name="added_selected">"Added selected "</string>
    <string name="no_artist">No Artist</string>
    <string name="player_time_format" formatted="false">%2d:%02d.%01d</string>
    <string name="no_song">No Song</string>
    <string name="google_drive_cannot_get_drive_id">Cannot get drive id. Do you have access rights?</string>
    <string name="error_read_file">Error while reading from the file</string>
    <string name="projectFile_mime">application/json</string>
    <string name="pref_spotifyMarket">pref_spotifyMarket</string>
    <string name="pref_midi_channel_title">MIDI Channel</string>
    <string name="pref_midi_channel">pref_midi_channel</string>
    <string name="ChooseColorActivityTitle">Set Color</string>
    <string name="menu_save">Save</string>
    <string name="menu_load">Load</string>
    <string name="menu_import_project">Import</string>
    <string name="menu_export_project">Export</string>
    <string name="player_noPlayerHint">Touch me!</string>
    <string name="no_results_hint_text">No results.</string>
    <string name="pref_spotify_login_title">Log in</string>
    <string name="pref_spotify_logout_title">Log out</string>
    <string name="pref_spotify_login_key">pref_spotify_login</string>
    <string name="pref_spotify_market_title">Market</string>
    <string name="authenticationSucceeded">Authorization succeeded</string>
    <string name="authenticationFailed">Authorization failed</string>
    <string name="authenticationCanceled">Authorization canceled</string>
    <string name="spotifyNotLoggedIn">Not logged in</string>
    <string name="retrievingUsername">Retrieving user name ...</string>
</resources>
