<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:title="@string/pref_clear_cache_title"
        android:key="@string/pref_clear_cache_key"/>
    <CheckBoxPreference
        android:title="@string/pref_keep_screen_on_title"
        android:summary="@string/pref_keep_screen_on_summary"
        android:defaultValue="true"
        android:key="@string/pref_keep_screen_on_key" />
    <ListPreference
        android:key="@string/pref_spotifyMarket"
        android:title="Spotify Market"
        android:summary="%s"
        android:defaultValue="DE"
        android:entries="@array/SpotifyMarkets"
        android:entryValues="@array/SpotifyMarkets"/>
    <ListPreference
        android:key="@string/pref_midi_channel"
        android:title="@string/pref_midi_channel_title"
        android:summary="%s"
        android:defaultValue="1"
        android:entries="@array/midiChannels"
        android:entryValues="@array/midiChannelValues"/>
</PreferenceScreen>