<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_export_project"
        android:title="@string/menu_export_project"
        compat:showAsAction="never"
        android:icon="@android:drawable/ic_menu_save"/>

    <item android:id="@+id/menu_import_project"
        android:title="@string/menu_import_project"
        compat:showAsAction="never"/>

    <item android:id="@+id/menu_new_group"
        android:title="@string/menu_new_group_title"
        compat:showAsAction="never"/>

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings_title"
        android:icon="@android:drawable/ic_menu_preferences"
        compat:showAsAction="never"/>

</menu>